GNOME Bugzilla – Bug 746098
monitor-manager-kms: Tell cogl to ignore CRTCs when DPMS isn't ON
Last modified: 2015-03-16 15:40:07 UTC
Otherwise cogl will try to page flip and fail.
Created attachment 299216 [details] [review] monitor-manager-kms: Tell cogl to ignore CRTCs when DPMS isn't ON
Review of attachment 299216 [details] [review]: Makes sense.
Review of attachment 299216 [details] [review]: Err no ... got this backwards. Don't you want to ignore crtcs when DPMS is *on* ?
(In reply to drago01 from comment #3) > Don't you want to ignore crtcs when DPMS is *on* ? META_POWER_SAVE_ON aka DRM_MODE_DPMS_ON is the state where we're actually showing something so what we want is tell cogl to ignore (not flip) for any other values of that enum. Yes, there are several levels of negation going on with the enums and API...
(In reply to Rui Matos from comment #4) > (In reply to drago01 from comment #3) > > Don't you want to ignore crtcs when DPMS is *on* ? > > META_POWER_SAVE_ON aka DRM_MODE_DPMS_ON is the state where we're actually > showing something so what we want is tell cogl to ignore (not flip) for any > other values of that enum. > > Yes, there are several levels of negation going on with the enums and API... Yeah got confused by that. Looks good then.
Attachment 299216 [details] pushed as 43058a3 - monitor-manager-kms: Tell cogl to ignore CRTCs when DPMS isn't ON